src/main/resources/META-INF/resources/webjars/home/project/project.css
@media (min-width: 768px) {
	.exploded th.tool {
		width: 150px;
	}
	.exploded th.service {
		width: 100px;
	}
	.exploded .key .carousel-indicators, .key .carousel-control {
		display: none;
	}
	.exploded .key .carousel-inner {
		display: table;
	}
	.exploded .key .carousel-inner .item {
		display: table-cell;
	}
	.responsive-tool {
	    width: 150px;
	}
	.responsive-node {
	    width: 64px;
	}
}
.qrcode-toggle {
	float: right;
	top: -28px;
	right: -19px;
	position: relative;
	z-index: 1;
}
.qrcode-toggle .qrcode {
	position: absolute;
	right: 3px;
	top: 3px;
}
div.dt-button-background {
	opacity: 0
}

#subscriptions tr>.features {
	width: 160px;
}
#subscriptions tr>td:nth-child(2) {
	overflow: hidden;
}
#subscriptions .dtrg-group.dtrg-start {
	cursor: pointer;
}
#subscriptions .dtrg-group.dtrg-start td:first-child {
	padding: 0;
}
.dtrg-start .grouped-count {
	padding-bottom: 13px;
    margin-bottom: 0;
    margin-top: 0;
    vertical-align: top;
    display: block;
    padding-top: 13px;
}

.table.grouped>thead>tr>th.status, .table.grouped>tbody>tr>td.status {
	width: 32px;
	font-size: unset;
}
.table.grouped>thead>tr>th.status i {
	margin-left: 8px;
}
.table.grouped>tbody>tr>td.status {
	padding-left: 24px;
}
.table.grouped {
	border-left: none;
}
.dtrg-start .toggle {
	position: absolute;
	display: block;
}
.dtrg-start .toggle i {
    position: relative;
    left: 15px;
    top: 12px;
    display: inline;
}    
.dtrg-start.row-group-collapsed .toggle i.fa-minus-square {
	display: none;
}
.dtrg-start:not(.row-group-collapsed) .toggle i.fa-plus-square {
	display: none;
}
.details-audit {
	float: right;
	height: 0;
	position: relative;
	top: -8px;
}

